# Chess

./: .gitignore  CMakeLists.txt  README.md  build.bat  c.txt  count.bat
core/: AttackData.h  AttackGlobals.cpp  AttackGlobals.h  BoardGUI.h  Chess.h  Const.h  MagicUtils.h  Magics.h  Move.h  MoveCounter.h  MoveExec.h  MoveGen.h  Search.h  State.h  Test.h  ThreatGen.h  Undo.h  Utils.h  attackdata.h  attackglobals.cpp  attackglobals.h  bitintrinsics.h  boardgui.cpp  boardgui.h  const.h  engine.cpp  engine.h  evalglobals.cpp  evalglobals.h  evaluate.cpp  evaluate.h  evalutils.cpp  legalmove.cpp  legalmove.h  magics.cpp  magics.h  magicutils.cpp  magicutils.h  main.cpp  move.h  (+20 more)
